# finvizor

./: .gitignore  .ocamlformat  dune-project
lib/: dune
lib/TickerGetterHelpers/: HtmlParser.ml  HtmlParser.mli  TickerGetter.ml  TickerGetter.mli  UrlGenerator.ml  UrlGenerator.mli  dune  test.ml
lib/constants/: consts.ml  dune
lib/fetchers/: dune  fetcher.ml  fetcher.mli
lib/loggers/: dune  logger.ml  logger.mli
test/: dune
